[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phantom-brake-simulator"
version = "0.1.0"
description = "Simulate autonomous vehicle sensor fusion conflicts and phantom braking."
requires-python = ">=3.9"
dependencies = [
    "plotly>=5.18.0",
    "numpy>=1.26.0",
    "streamlit-javascript>=0.1.5",
    "supabase>=2.28.2",
]
